[metadata]
name = predator
version = attr: predator.__version__
description = Optimizable seed extraction from metabolic networks
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Lucas Bourneuf
author_email = lucas.bourneuf@inria.fr
url = https://github.com/aluriak/predator
license = GPL
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: ASP

[options]
zip_safe = False
include_package_data = True
packages = predator
install_requires =
    clyngor>=0.3.18
    networkx==2.2
    pytest>=4.4.0

[zest.releaser]
create-wheel = yes
python-file-with-version = predator/__init__.py
